--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
